[package]
name = "spotifyd"
version = "0.1.1"
authors = ["Simon Persson <simon@flaskpost.org>"]

[dependencies]
simplelog = "^0.4.2"
xdg = "^2.0"
ctrlc = { version = "2.0", features = ["termination"] }
rust-ini = {git="https://github.com/zonyitoo/rust-ini.git"}
getopts = "^0.2.14"
log = "^0.3.6"
syslog = "^3.1.0"
daemonize = {git="https://github.com/knsd/daemonize.git"}
rpassword = "^0.3"
futures = "*"
tokio-core = "0.1.6"
tokio-signal = "0.1.2"
tokio-io = "0.1.1"
hostname = "0.1.3"
libc = {git="https://github.com/rust-lang/libc.git"}
mio = "0.6.11"

[dependencies.librespot]
git = "https://github.com/qbit/librespot.git"

[features]
portaudio_backend = ["librespot/portaudio-backend"]
default = ["portaudio_backend"]
